added redux on homepage

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon backend/server.js",
+    "start": "node backend/server.js",
     "dev": "SET NODE_ENV=DEVELOPMENT& nodemon backend/server.js",
     "prod": "SET NODE_ENV=PRODUCTION& node backend/server.js",
     "seeder": "node backend/utils/seeder.js"
