--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,18 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-multi-carousel": "^2.6.5",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
@@ -54,5 +59,6 @@
     "autoprefixer": "^10.4.2",
     "postcss-cli": "^9.1.0",
     "tailwindcss": "^3.0.19"
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
