--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-hot-toast": "^2.2.0",
     "react-js-pagination": "^3.0.3",
     "react-multi-carousel": "^2.6.5",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
@@ -31,6 +32,8 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "react-circular-progressbar": "^2.0.4",
+    "recharts": "^2.1.9",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
